src/test/ui/borrowck/borrowck-overloaded-index-move-from-vec.stderr
error[E0507]: cannot move out of index of `MyVec<std::boxed::Box<i32>>`
  --> $DIR/borrowck-overloaded-index-move-from-vec.rs:20:15
   |
LL |     let bad = v[0];
   |               ^^^^
   |               |
   |               move occurs because value has type `std::boxed::Box<i32>`, which does not implement the `Copy` trait
   |               help: consider borrowing here: `&v[0]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
